# DSP-Storm-Damage-on-Urban-Areas

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  LICENSE  README.md  environment.yml  pyproject.toml  startup-script.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/docker/: Dockerfile
DSP-Dashboard/: README.md  Storm_Data_Incidents.csv  app.py  app2.py  converted_serviceareas.geojson  get_started.py  serviceareas.csv  test_app.py
dsp-mlflow/mlruns/0/43f0af67ea014632b42c0126a36185c2/artifacts/xgboost-model/: MLmodel  model.xgb
dsp-mlflow/mlruns/0/4d30d6f4f4624f9b8449bfff2eab3e5f/artifacts/xgboost-model/: MLmodel  model.xgb
dsp-mlflow/mlruns/0/56989726ef84414388107ba6841a9bb1/artifacts/xgboost-model/: MLmodel  model.xgb
dsp-mlflow/mlruns/0/8fb664fe581c48b794ad9b96ad836d0c/artifacts/xgboost-model/: MLmodel  model.xgb  python_env.yaml
dsp-mlflow/mlruns/0/96166eb5969f47c990a30dd27cee5074/artifacts/xgboost-model/: MLmodel  model.xgb
dsp-mlflow/mlruns/0/addbb08751f94ec7b60c00ffe407defa/artifacts/xgboost-model/: MLmodel  model.xgb
dsp-mlflow/mlruns/0/e95578f2e67840fcba5b42ac24b6259a/artifacts/xgboost-model/: MLmodel  conda.yaml  model.xgb  requirements.txt
src/dsp-dagster/: .env  DSP.db  DSP_Project.db  Dockerfile  README.md  dagster.yaml  pyproject.toml  setup.cfg  setup.py  startup-script.sh
src/dsp-dagster/.telemetry/: id.yaml
src/dsp-dagster/configs/: dagster.yaml
src/dsp-dagster/data/: Datasets description.docx  Fire_Stations_and_Vehicles.xlsx  Kazernes.xlsx  Stom_Data_Deployments.xlsx  Stom_Data_Incidents.xlsx  Storm_Data_Deployments.xlsx  Storm_Data_Large.xlsx  Storm_Data_Small.xlsx  Stormdata_FireStations.xlsx
src/dsp-dagster/dsp_dagster/: __init__.py  assets.py  jobs.py
src/dsp-dagster/dsp_dagster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/dsp-dagster/dsp_dagster/assets/: __init__.py  fire_department_data.py  knmi_data.py  municipality_data.py
src/dsp-dagster/dsp_dagster/assets/extraction/: fire_department_data.py  geodata.py  knmi_data.py  municipality_data.py
src/dsp-dagster/dsp_dagster/assets/models/: models.py  service_area_weather_trees.py
src/dsp-dagster/dsp_dagster/assets/transformation/: aggregation.py  buurten_weer_bomen_incidenten.py  clean.py  intermediate.py  joins.py  weather_tree_incident.py  wijken_weer_bomen_incidenten.py
src/dsp-dagster/dsp_dagster/etl/assets/: fire_department_data.py  knmi_data.py
src/dsp-dagster/dsp_dagster/etl/transformations/: joins.py
src/dsp-dagster/dsp_dagster/pipelines/: pipeline_definitions.py
src/dsp-dagster/dsp_dagster/resources/: __init__.py  custom_resource.py
src/dsp-dagster/dsp_dagster/util/: helpers.py  metadatafuncs.py
src/dsp-dagster/scripts/: convert_dtypes.py
src/dsp-dagster/storage/logs/564ef30b-9ca6-4a1d-b1ed-9adcaa15dfd1/compute_logs/: fdojmpqw.err  gbvljrdm.err  jgzqsjzr.err  mnxffoku.err  qimafikz.err  vpjqpvcn.err
src/dsp-dagster/tests/: workbook.ipynb
src/dsp-dagster/tmpcbcri7uv/history/: runs.db
src/dsp-dagster/tmpcbcri7uv/history/runs/: index.db
src/dsp-dagster/tmpcbcri7uv/schedules/: schedules.db
src/dsp-dagster/tmpkxy2606l/history/: runs.db
src/dsp-dagster/tmpkxy2606l/history/runs/: 2bd257f2-491b-4b83-bef0-517266799129.db  6f94b894-5886-4608-8413-b262d74a1428.db  index.db
src/dsp-dagster/tmpkxy2606l/schedules/: schedules.db
src/dsp-dagster/tmpkxy2606l/storage/2bd257f2-491b-4b83-bef0-517266799129/compute_logs/: beyxgtpj.err  cjwytyct.err  elrpjylh.err  przackqb.err  wanbjpxb.err  yifmdsru.err
src/dsp-dagster/tmpkxy2606l/storage/6f94b894-5886-4608-8413-b262d74a1428/compute_logs/: bcylyelb.err  izsleaab.err  pkrvnhxw.err  sdzsmnae.err  zozqddoy.err  zzzozsac.err
src/dsp-dagster/tmpx_aw7xi8/history/: runs.db
src/dsp-dagster/tmpx_aw7xi8/history/runs/: 2f1cfbbc-14f7-48d4-ba3c-33392b822ddc.db  31600206-47ba-484c-a076-e062a1077067.db  5eb8942b-09e0-404d-a7ee-c51dff1faafd.db  7c4c46c8-ff4c-44c5-bec6-33066fcecc19.db  99f500c0-279b-4437-9b1a-28adea253859.db  cdf93581-c4bb-48ff-80ab-d4a994e32daa.db  index.db
src/dsp-dagster/tmpx_aw7xi8/schedules/: schedules.db
src/dsp-dagster/tmpx_aw7xi8/storage/2f1cfbbc-14f7-48d4-ba3c-33392b822ddc/compute_logs/: ebftbfsm.err
src/dsp-dagster/tmpx_aw7xi8/storage/31600206-47ba-484c-a076-e062a1077067/compute_logs/: bzflrpoq.err  ccqhzpal.err  dqafjslj.err  ifbyuuaf.err  wlguykui.err
src/dsp-dagster/tmpx_aw7xi8/storage/5eb8942b-09e0-404d-a7ee-c51dff1faafd/compute_logs/: ijymtmnn.err
src/dsp-dagster/tmpx_aw7xi8/storage/7c4c46c8-ff4c-44c5-bec6-33066fcecc19/compute_logs/: khaqnsfh.err
src/dsp-dagster/tmpx_aw7xi8/storage/99f500c0-279b-4437-9b1a-28adea253859/compute_logs/: fiuuddkk.err  ibhuuvql.err  qzhvydkn.err  szoxxqbj.err  vqsokjij.err
src/dsp-dagster/tmpx_aw7xi8/storage/cdf93581-c4bb-48ff-80ab-d4a994e32daa/compute_logs/: rhhxdest.err
src/dsp-mlflow/: Dockerfile  pyproject.toml  startup-script.sh
src/dsp-mlflow/mlruns/: modeling.py
src/dsp-streamlit/: Dockerfile  Home.py  README.md  _🏠_Home.py  pyproject.toml  startup-script.sh  🏠_Home.py
src/dsp-streamlit/custom/: database.py
src/dsp-streamlit/pages/: 1_📑_Options.py  2_🚒_Dashboard.py  2_🚒_Storm_Damage_On_Urban_Areas.py
src/notebooks/: Modelling.ipynb  data_prep.ipynb  exploratory-data-analysis.ipynb  model_data.parquet  modelling.ipynb  modelling_tree-loc.ipynb  test_modelling.ipynb  workbook.ipynb
src/tutorial/data/: most_frequent_words  most_frequent_words.json  signups  topstories  topstories.csv  topstory_ids  topstory_ids.json
src/tutorial/tutorial/: __init__.py  assets.py
