[tool.poetry]
name = "dsp-compose"
version = "0.1.0"
description = "Whole DSP project for the Fire Department Amsterdam/Amstelland. This package includes all elements for this project: Dagster, MLFlow, Streamlit etc"
authors = ["Stijn Hering <stijn@hering.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.29.0"
plotly = "^5.18.0"
faker = "^21.0.0"
dagster = "^1.5.13"
dagster-webserver = "^1.5.13"
dagster-mlflow = "^0.21.13"
dagster-duckdb = "^0.21.13"
dagster-duckdb-pandas = "^0.21.13"
dagster-duckdb-polars = "^0.21.13"
xlsx2csv = "^0.8.2"
openpyxl = "^3.1.2"
asyncio = "^3.4.3"
httpx = "^0.26.0"
geopandas = "^0.14.1"
duckdb = "^0.9.2"
duckdb-engine = "^0.10.0"
jupysql = "^0.10.7"
notebook = "^7.0.6"
xgboost = "^2.0.3"
scikit-learn = "^1.3.2"
ruff = "^0.1.9"
spelling = "^1.2.1"
jupyter = "^1.0.0"
ipykernel = "^6.27.1"
ipython = "^8.19.0"
requests = "^2.30.0"
urllib3 = "^1.26"
requests-toolbelt = "0.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
