[tool.poetry]
name = "dsp-dagster"
version = "0.1.0"
description = "Dagster pyproject.toml"
authors = ["Stijn Hering <stijn@hering.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dagster = "^1.5.13"
dagster-webserver = "^1.5.13"
dagster-mlflow = "^0.21.13"
dagster-duckdb = "^0.21.13"
dagster-duckdb-pandas = "^0.21.13"
dagster-duckdb-polars = "^0.21.13"
xlsx2csv = "^0.8.2"
openpyxl = "^3.1.2"
asyncio = "^3.4.3"
httpx = "^0.26.0"
faker = "^21.0.0"
geopandas = "^0.14.1"
notebook = "^7.0.6"
requests = "^2.30.0"
urllib3 = "^1.26"
requests-toolbelt = "0.10.1"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "dsp_dagster"
# Additional options for setuptools can be specified here

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = ["E501"]
ignore-init-module-imports = true
# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []
fix = true


# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 80

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

# [tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
# max-complexity = 10

